Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48595

qtmultimedia/5.6: Lots of q..._p.h does not have the "We mean it." warnings during

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0 Beta
    • 5.6.0 Alpha
    • Multimedia
    • None
    •  c2c71716825ef8923c63c11d71ace91a1362ce19 (qtmultimedia/5.6, 8.10.2015, 5.6b)

    Description

      QtMultimedia: WARNING: /depot/fkleint/qt-56/qtmultimedia/src/multimedia/qmediaresourcepolicy_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: /depot/fkleint/qt-56/qtmultimedia/src/multimedia/qmediaresourcepolicyplugin_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: /depot/fkleint/qt-56/qtmultimedia/src/multimedia/qmediaresourceset_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/qmediaserviceprovider_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/qmediastoragelocation_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/audio/qaudiobuffer_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/gstvideoconnector_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstappsrc_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstcodecsinfo_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreameraudioinputselector_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreameraudioprobecontrol_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamerbufferprobe_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamergltexturerenderer_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamermirtexturerenderer_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamervideoinputdevicecontrol_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamervideooverlay_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamervideoprobecontrol_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamervideorenderer_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamervideorendererinterface_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamervideowidget_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/gsttools_headers/qgstreamervideowindow_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/qtmultimediaquicktools_headers/qdeclarativevideooutput_backend_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/qtmultimediaquicktools_headers/qdeclarativevideooutput_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/qtmultimediaquicktools_headers/qsgvideonode_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/recording/qmediarecorder_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/video/qvideooutputorientationhandler_p.h does not have the "We mean it." warning
      QtMultimedia: WARNING: qt-56/qtmultimedia/src/multimedia/video/qvideosurfaceoutput_p.h does not have the "We mean it." warning
      

      Attachments

        1. mean.pl
          2 kB
          Friedemann Kleint

        Issue Links

          For Gerrit Dashboard: QTBUG-48595
          # Subject Branch Project Status CR V

          Activity

            People

              kleint Friedemann Kleint
              kleint Friedemann Kleint
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes