src/imports/audioengine/qdeclarative_audioengine_p.h
@@ -34,6 +34,17 @@
 #ifndef QDECLARATIVEAUDIOENGINE_P_H
 #define QDECLARATIVEAUDIOENGINE_P_H
 
+//
+//  W A R N I N G
+//  -------------
+//
+// This file is not part of the Qt API.  It exists purely as an
+// implementation detail.  This header file may change from version to
+// version without notice, or even be removed.
+//
+// We mean it.
+//
+
 #include <QtQml/qqml.h>
 #include <QtQml/qqmlcomponent.h>
 #include <QtQml/qqmlpropertymap.h>
