src/imports/audioengine/qsoundinstance_p.h
@@ -34,6 +34,17 @@
 #ifndef QSOUNDINSTANCE_P_H
 #define QSOUNDINSTANCE_P_H
 
+//
+//  W A R N I N G
+//  -------------
+//
+// This file is not part of the Qt API.  It exists purely as an
+// implementation detail.  This header file may change from version to
+// version without notice, or even be removed.
+//
+// We mean it.
+//
+
 #include <QVector3D>
 #include <QObject>
 #include "qsoundsource_p.h"
