src/multimedia/gsttools_headers/qgstreamergltexturerenderer_p.h
@@ -34,6 +34,17 @@
 #ifndef QGSTREAMERGLTEXTURERENDERER_H
 #define QGSTREAMERGLTEXTURERENDERER_H
 
+//
+//  W A R N I N G
+//  -------------
+//
+// This file is not part of the Qt API.  It exists purely as an
+// implementation detail.  This header file may change from version to
+// version without notice, or even be removed.
+//
+// We mean it.
+//
+
 #include <qvideorenderercontrol.h>
 #include <private/qvideosurfacegstsink_p.h>
 #include <private/qgstreamerbushelper_p.h>
