src/multimedia/gsttools_headers/qgstreamermirtexturerenderer_p.h
@@ -34,6 +34,17 @@
 #ifndef QGSTREAMERMIRTEXTURERENDERER_H
 #define QGSTREAMERMIRTEXTURERENDERER_H
 
+//
+//  W A R N I N G
+//  -------------
+//
+// This file is not part of the Qt API.  It exists purely as an
+// implementation detail.  This header file may change from version to
+// version without notice, or even be removed.
+//
+// We mean it.
+//
+
 #include <qmediaplayer.h>
 #include <qvideorenderercontrol.h>
 #include <private/qvideosurfacegstsink_p.h>
