src/multimedia/gsttools_headers/qgstreamervideoinputdevicecontrol_p.h
@@ -34,6 +34,17 @@
 #ifndef QGSTREAMERVIDEOINPUTDEVICECONTROL_H
 #define QGSTREAMERVIDEOINPUTDEVICECONTROL_H
 
+//
+//  W A R N I N G
+//  -------------
+//
+// This file is not part of the Qt API.  It exists purely as an
+// implementation detail.  This header file may change from version to
+// version without notice, or even be removed.
+//
+// We mean it.
+//
+
 #include <qvideodeviceselectorcontrol.h>
 #include <QtCore/qstringlist.h>
 
