src/multimedia/gsttools_headers/qgstreamervideorendererinterface_p.h
@@ -34,6 +34,17 @@
 #ifndef QGSTREAMERVIDEOOUTPUTCONTROL_H
 #define QGSTREAMERVIDEOOUTPUTCONTROL_H
 
+//
+//  W A R N I N G
+//  -------------
+//
+// This file is not part of the Qt API.  It exists purely as an
+// implementation detail.  This header file may change from version to
+// version without notice, or even be removed.
+//
+// We mean it.
+//
+
 #include <gst/gst.h>
 
 #include <QtCore/qobject.h>
